Add link to Lambda Island

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -73,6 +73,7 @@ Video training (commercial):
 * https://www.pluralsight.com/courses/clojure-fundamentals-part-one[Clojure Fundamentals] - Alan Dipert (PluralSight)
 * https://www.pluralsight.com/courses/clojure-concurrency-tutorial[Clojure Concurrency] - Craig Andera (PluralSight)
 * https://www.packtpub.com/web-development/building-web-applications-clojure-video[Building Web Applications with Clojure] - Tomek Lipski (Packt)
+* https://lambdaisland.com/[Lambda Island] - Screencast series about ClojureScript and Clojure
 
 == Clojure Tools
 
