--- a/content/guides/guides.adoc
+++ b/content/guides/guides.adoc
@@ -12,7 +12,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 === Language
 
-* <<weird_characters#,The Weird and Wonderful Characters of Clojure>>
+* <<weird_characters#,Characters>>
 * <<threading_macros#,Threading Macros>>
 * <<comparators#,Comparators>>
 * <<reader_conditionals#,Reader Conditionals>>
